# lovinators-ultimate-sitemap-parser

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: helpers.py  test_helpers.py  test_panso.py  test_tree.py
tests/web_client/: test_requests_client.py
usp/: __init__.py  exceptions.py  fetch_parse.py  helpers.py  http_client.py  tree.py
usp/objects/: page.py  sitemap.py
usp/web_client/: abstract_client.py  requests_client.py
