[tool.poetry]
name = "lovinators-ultimate-sitemap-parser"
version = "0.1.0"
description = ""
authors = [
  "Joakim Hellsén <tlovinator@gmail.com>",
  "Linas Valiukas <linas@media.mit.edu>",
  "Hal Roberts <hroberts@cyber.law.harvard.edu>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "^2.8.2"
loguru = "^0.7.2"
httpx = { extras = ["http2"], version = "^0.25.1" }
fake-useragent = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-httpx = "^0.30.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.ruff]
fix = true
preview = true
select = ["ALL"]
ignore = [
  "D100",
  "D104",
  "CPY001",
  "ERA001",
  "TD002",
  "FIX002",
  "TD003",
  "COM812",
  "ISC001",
]
unsafe-fixes = true
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "S101", # asserts allowed in tests...
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
